More abstract seam for Bagger intake interaction